<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="7"
    android:columnCount="4">

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/telefoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/telefoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:inputType="phone" />

    <CheckBox
        android:id="@+id/notificacoesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/receber_notificacoes" />

    <RadioGroup
        android:id="@+id/notificacoesRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowSpan="2"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/emailRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <RadioButton
            android:id="@+id/telefoneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"/>

    </RadioGroup>

    <Button
        android:id="@+id/limparButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:text="@string/limpar"
        android:onClick="limparFormulario" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:text="@string/salvar" />

</GridLayout>